fix overflow

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,14 +1,16 @@
 body,html {
   padding: 0;
   margin: 0;
-  font-family: monospace
+  font-family: monospace;
+  overflow: hidden;
 }
 
 a {
   color: inherit;
-  text-decoration: none
+  text-decoration: none;
 }
 
 * {
-  box-sizing: border-box
+  box-sizing: border-box;
 }
+
